# bdash

./: .dockerignore  README.md  fly.toml  history.txt  package.json
src/: db.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: client.rs  mod.rs
src-tauri/src/application/commands/account/: mod.rs
src-tauri/src/application/queries/: all_accounts.rs  mod.rs
src-tauri/src/application/routes/: accounts.rs  mod.rs
src-tauri/src/domain/: account.rs  game.rs  mod.rs
src-tauri/src/infrastructure/: db.rs
src-tauri/src/infrastructure/repositories/: account_repository.rs
src/routes/: +layout.svelte  +page.svelte  Footer.svelte
src/routes/users/: +page.svelte  CopyToken.svelte  Delete.svelte  User.svelte  store.ts
src/routes/utils/: MetaTag.svelte  copy.ts  request.ts
