[package]
name = "bdash"
version = "0.0.1"
description = "B Dashboard"
authors = ["Igor Trofimov"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bdash_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = "1.5.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.22"
once_cell = "1.19.0"
csv = "1.3.0"
